--- a/vignettes/Calculating Disease Endpoints for Cancer.html
+++ b/vignettes/Calculating Disease Endpoints for Cancer.html
@@ -14,7 +14,7 @@
 
 <meta name="date" content="2018-12-09" />
 
-<title>Calculationg Disease Endpoints for Cancer</title>
+<title>Calculating Disease Endpoints for Cancer</title>
 
 
 
